--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,11 +15,13 @@
     <string name="redords2">2015.04.29，完成基本功能与框架，版本号2.1.3</string>
     <string name="title_activity_about">About</string>
     <string name="aboutgame">About Game</string>
-    <string name="gamesettings">Game Settings</string>
-    <string name="playchess">Play Chess</string>
+    <string name="aimode">人机对战</string>
+    <string name="playchess">双人游戏</string>
     <string name="menuback">menuback</string>
     <string name="gameback">gameback</string>
     <string name="webback">webback</string>
     <string name="animation">animation</string>
+    <string name="title_activity_aichess">AIChess</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
