--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Four Chess</string>
+    <string name="app_name">FourChess</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_menu">Menu</string>
     <string name="settings">Settings</string>
@@ -15,8 +15,8 @@
     <string name="redords2">2015.04.29，完成基本功能与框架，版本号2.1.3</string>
     <string name="title_activity_about">About</string>
     <string name="aboutgame">About Game</string>
-    <string name="aimode">人机对战</string>
-    <string name="playchess">双人游戏</string>
+    <string name="aimode">modeAI</string>
+    <string name="playchess">modePP</string>
     <string name="menuback">menuback</string>
     <string name="gameback">gameback</string>
     <string name="webback">webback</string>
