--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,26 +2,8 @@
 <resources>
 
     <string name="app_name">FourChess</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_menu">Menu</string>
-    <string name="settings">Settings</string>
     <string name="game">Game</string>
-    <string name="about">About</string>
-    <string name="title_activity_four_chess">FourChess</string>
-    <string name="reset">Reset</string>
-    <string name="retract">retract</string>
-    <string name="restart">restart</string>
-    <string name="records">2015.04.26，基本完成整体框架与功能。下面进行代码规范化。</string>
-    <string name="redords2">2015.04.29，完成基本功能与框架，版本号2.1.3</string>
-    <string name="title_activity_about">About</string>
-    <string name="aboutgame">About Game</string>
-    <string name="aimode">modeAI</string>
-    <string name="playchess">modePP</string>
-    <string name="menuback">menuback</string>
-    <string name="gameback">gameback</string>
-    <string name="webback">webback</string>
-    <string name="animation">animation</string>
-    <string name="title_activity_aichess">AIChess</string>
-    <string name="action_settings">Settings</string>
+    <string name="mode_pp">Player VS Player</string>
+    <string name="mode_ai">Player VS AI</string>
 
 </resources>
